--- a/vanilla-ts-combo-simple/src/style.css
+++ b/vanilla-ts-combo-simple/src/style.css
@@ -19,6 +19,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -26,6 +27,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -38,6 +40,12 @@ h1 {
 
 #app {
   max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+#mathjs {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
